--- a/css/stylepri.css
+++ b/css/stylepri.css
@@ -3,8 +3,8 @@
     margin: 0;
     box-sizing: border-box;
 }
-a{
-
+a {
+    font-size: 0.6rem;
 }
 body{
     font-family: 'Bitter', serif;
@@ -35,6 +35,12 @@ body{
     align-items: center;
 
 }
+.letra{
+    font-size: 1rem;
+}
+.letra2{
+    font-size: 0.6rem;
+}
 .img img{
     width: 200px;
 }
@@ -55,7 +61,7 @@ form{
     width: 50;
 }
 form h2{
-    font-size: 2.9rem;
+    font-size: 1rem;
     text-transform: uppercase;
     margin: 15px 0;
     color:black;
