--- a/img/style.css
+++ b/img/style.css
@@ -51,6 +51,10 @@ body {
   width: 50px;
   height: 50px;
 }
+.carta2{
+  width: 150px;
+  height: 230px;  
+}
 .carta1{
   width: 150px;
   height: 230px;
